fix reload fix scrollbar

--- a/report-customer.component.scss
+++ b/report-customer.component.scss
@@ -134,8 +134,7 @@
 }
 
 .customer-management-table {
-	height: auto !important;
-	overflow-y: auto;
-	max-height: 100vh; /* หรือ fixed height */
+  overflow: visible !important;
+  max-height: none !important;
+  height: auto !important;
 }
-
